fix: err message overflow

--- a/blocks/form/__input-err/form__input-err.css
+++ b/blocks/form/__input-err/form__input-err.css
@@ -6,4 +6,8 @@
   line-height: 15px;
   color: #FF0000;
   margin-top: 5px;
+
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
